fix footer layout - text out of place

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -141,6 +141,9 @@ button:hover {
         height: 75px;
         margin-bottom: 20px;
     }
+    .footer-govprinters {
+       
+    }
 }
 
 .year-nav {
